--- a/task3.html
+++ b/task3.html
@@ -40,7 +40,7 @@
             </li>
         </ul>
         <div class="main2">
-            <h2 class="name">l'm Jonathan Doe</h2>
+            <h2 class="name">l'm Jonathan Doe.</h2>
 
             <p class="text">I'am a Manila based <b>graphic designer</b>,<b>illustrator</b> and <b>webdesigner</b>
                 creating awesome and
