--- a/task4.html
+++ b/task4.html
@@ -18,6 +18,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Cherokee&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assests/css/pages.css">
 </head>
 
@@ -69,31 +72,37 @@
     </ul>
 
 
-<div class="pages">
+    <div class="pages">
 
-    <div class="page1">
- 
-      <i class="fa-regular fa-face-meh"></i>
-      <h2>training Courses</h2>
-      <div class="div1"></div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis perspiciatis facilis, temporibus impedit officia cumque?</p>
+        <div class="page1">
+
+            <i class="fa-regular fa-face-meh"></i>
+            <h2>training Courses</h2>
+            <div class="div1"></div>
+            <p>The gradual accumulation of information about atomic and small-scale behaviour...</p>
+
+        </div>
+
+        <div class="page2">
+            <i class="fa-solid fa-check-double"></i>
+            <h2>2,769 online courses</h2>
+            <div class="div1"></div>
+            <p>The gradual accumulation of information about atomic and small-scale behaviour...</p>
+        </div>
+
+
+        <div class="page3">
+            <i class="fa-regular fa-credit-card"></i>
+            <h2>training courses</h2>
+            <div class="div1"></div>
+            <p>The gradual accumulation of information about atomic and small-scale behaviour...</p>
+        </div>
 
     </div>
 
-    <div class="page2">
-        <i class="fa-solid fa-check-double"></i>
-    </div>
 
 
-    <div class="page3">
-        <i class="fa-regular fa-credit-card"></i>
-    </div>
-
-</div>
-    
-
-
-<script src="https://kit.fontawesome.com/4f4876aa8a.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/4f4876aa8a.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
